Update avatars to add skin tone diversity

--- a/app/src/main/res/drawable/avatar_10.xml
+++ b/app/src/main/res/drawable/avatar_10.xml
@@ -12,7 +12,7 @@
       android:fillType="evenOdd"/>
   <path
       android:pathData="m24.032,38.68 l14.92,0.09v3.437l-0.007,0.053a2.784,2.784 0,0 1,-0.07 0.462l-0.05,0.341 -0.03,0.071c-0.966,5.074 -5.193,7.035 -7.803,8.401 -2.75,-1.498 -6.638,-4.197 -6.947,-8.972l-0.013,-0.059v-0.2a8.897,8.897 0,0 1,-0.004 -0.207c0,0.036 0.003,0.07 0.004,0.106z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#e6bc98"
       android:fillType="evenOdd"/>
   <path
       android:fillColor="#FF000000"
@@ -22,11 +22,11 @@
       android:fillAlpha="0.11"/>
   <path
       android:pathData="M18.104,25.235c-4.94,1.27 -0.74,7.29 2.367,7.264a19.805,19.805 0,0 1,-2.367 -7.264zM43.837,25.235c4.94,1.27 0.74,7.29 -2.368,7.263a19.8,19.8 0,0 0,2.368 -7.263z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#e6bc98"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M30.733,11.361c20.523,0 12.525,32.446 0,32.446 -11.83,0 -20.523,-32.446 0,-32.446z"
-      android:fillColor="#ffe8be"
+      android:fillColor="#e6bc98"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M21.047,22.105a1.738,1.738 0,0 1,-0.414 2.676c-1.45,1.193 -1.503,5.353 -1.503,5.353 -0.56,-0.556 -0.547,-3.534 -1.761,-5.255s-2.032,-13.763 4.757,-18.142a4.266,4.266 0,0 0,-0.933 3.6s4.716,-6.763 12.54,-6.568a5.029,5.029 0,0 0,-2.487 3.26s6.84,-2.822 12.54,0.535a13.576,13.576 0,0 0,-4.145 1.947c2.768,0.076 5.443,0.59 7.46,2.384a3.412,3.412 0,0 0,-2.176 4.38c0.856,3.503 0.936,6.762 0.107,8.514 -0.829,1.752 -1.22,0.621 -1.739,4.295a1.609,1.609 0,0 1,-0.77 1.214c-0.02,0.266 0.382,-3.756 -0.655,-4.827 -1.036,-1.07 -0.385,-2.385 0.029,-3.163 2.89,-5.427 -5.765,-7.886 -10.496,-7.88 -4.103,0.005 -14,1.87 -10.354,7.677z"
