--- a/app/src/main/res/drawable/avatar_3.xml
+++ b/app/src/main/res/drawable/avatar_3.xml
@@ -8,7 +8,7 @@
       android:fillColor="#e9573e"/>
   <path
       android:pathData="M23.255,38.68l15.907,0.149v3.617l7.002,3.339 -15.687,14.719 -13.461,-15.34 6.239,-2.656V38.68z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#e6bc98"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M53.478,51.993A30.813,30.813 0,0 1,30.9 61.8a31.226,31.226 0,0 1,-3.837 -0.237A34.071,34.071 0,0 1,15.9 57.919a31.034,31.034 0,0 1,-7.856 -6.225l1.283,-3.1 11.328,-5.054c0.875,4.536 4.235,11.535 10.176,15.502a24.128,24.128 0,0 0,11.057 -15.318l10.063,4.903z"
@@ -22,11 +22,11 @@
       android:fillAlpha="0.11"/>
   <path
       android:pathData="M31.129,8.432c21.281,0 12.987,35.266 0,35.266 -12.266,0 -21.281,-35.266 0,-35.266z"
-      android:fillColor="#ffe8be"
+      android:fillColor="#e6bc98"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M18.365,24.045c-3.07,1.34 -0.46,7.687 1.472,7.658a31.974,31.974 0,0 1,-1.472 -7.658zM44.14,24.045c3.07,1.339 0.46,7.687 -1.471,7.658a31.993,31.993 0,0 0,1.471 -7.658z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#e6bc98"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M23.396,15.437c-0.592,2.768 -0.384,5.52 -3.008,6.028 -0.624,0.12 -1.037,0.965 -1.172,1.71a22.896,22.896 0,0 0,-0.38 4.931c0.104,0.569 -0.396,-1.092 -0.396,-1.092l-0.085,-3.174s-0.037,-0.608 -0.023,-1.535c0.03,-1.88 0.244,-4.928 1.196,-5.86 1.421,-1.39 3.868,-1.008 3.868,-1.008zM39.095,15.437c0.592,2.768 0.385,5.52 3.008,6.028 0.624,0.12 1.038,0.965 1.172,1.71a21.808,21.808 0,0 1,0.312 4.947c-0.105,0.57 0.395,-1.092 0.395,-1.092l0.166,-3.178s0.025,-0.62 0.01,-1.547c-0.028,-1.88 -0.242,-4.928 -1.195,-5.86 -1.421,-1.39 -3.868,-1.008 -3.868,-1.008z"
@@ -38,6 +38,6 @@
       android:fillType="evenOdd"/>
   <path
       android:pathData="M32.415,38.594a2.774,2.774 0,0 0,2.214 -0.588c0.72,-0.83 1.307,-2.009 0.215,-2.643a8.583,8.583 0,0 0,-3.581 -1.472,8.595 8.595,0 0,0 -3.604,1.47c-1.34,0.775 -0.52,1.815 0.201,2.645a2.774,2.774 0,0 0,2.214 0.588c-0.811,-2.824 3.153,-2.824 2.341,0z"
-      android:fillColor="#ffe8be"
+      android:fillColor="#e6bc98"
       android:fillType="evenOdd"/>
 </vector>
