--- a/app/src/main/res/drawable/avatar_13.xml
+++ b/app/src/main/res/drawable/avatar_13.xml
@@ -8,7 +8,7 @@
       android:fillColor="#3dbc93"/>
   <path
       android:pathData="M23.255,38.68l15.907,0.121v12.918l-15.907,-0.121V38.68z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#e6bc98"
       android:fillType="evenOdd"/>
   <path
       android:fillColor="#FF000000"
@@ -18,15 +18,15 @@
       android:fillAlpha="0.11"/>
   <path
       android:pathData="M31.129,8.432c21.281,0 12.987,35.266 0,35.266 -12.266,0 -21.281,-35.266 0,-35.266z"
-      android:fillColor="#ffe8be"
+      android:fillColor="#e6bc98"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M18.365,24.046c-3.07,1.339 -0.46,7.686 1.472,7.658a31.972,31.972 0,0 1,-1.472 -7.659zM44.135,24.046c3.07,1.339 0.465,7.686 -1.466,7.657a31.978,31.978 0,0 0,1.466 -7.657z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#e6bc98"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M44.123,24.17s7.96,-11.785 -2.636,-16.334a11.881,11.881 0,0 0,-12.87 -5.22C22.775,3.805 20.604,6.7 20.604,6.7s-5.53,5.014 -10.44,5.117a9.774,9.774 0,0 0,6.28 1.758c-0.672,1.68 -1.965,7.21 1.989,10.854 4.368,-2.868 8.012,-8.477 8.012,-8.477s0.982,3.257 0.207,4.86a18.879,18.879 0,0 0,7.922 -3.531c2.542,-2.036 3.893,-4.297 5.31,-4.326 3.256,-0.069 4.213,9.74 4.24,11.216z"
-      android:fillColor="#ecbe6a"
+      android:fillColor="#BD8D35"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M53.456,52.022A30.766,30.766 0,0 1,30.9 61.829a31.163,31.163 0,0 1,-3.833 -0.237,34.01 34.01,0 0,1 -11.15,-3.644 31.007,31.007 0,0 1,-7.849 -6.225l1.282,-3.1 13.91,-6.212c0.625,3.723 7.806,8.175 7.806,8.175s7.213,-3.412 8.087,-8.211l12.777,6.281z"
