--- a/app/src/main/res/drawable/avatar_15.xml
+++ b/app/src/main/res/drawable/avatar_15.xml
@@ -26,23 +26,23 @@
       android:fillAlpha="0.18"/>
   <path
       android:pathData="M31.129,8.432c21.281,0 12.987,35.266 0,35.266 -12.267,0 -21.281,-35.266 0,-35.266z"
-      android:fillColor="#ffe8be"
+      android:fillColor="#d4aa78"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M18.365,24.045c-3.07,1.34 -0.46,7.687 1.472,7.658a31.973,31.973 0,0 1,-1.472 -7.658zM44.14,24.045c3.07,1.339 0.46,7.687 -1.471,7.658a31.993,31.993 0,0 0,1.471 -7.658z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#d4aa78"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M19.113,25.706c-2.83,-4.958 -2.783,-9.375 -1.362,-11.817 2.048,-3.52 4.922,-3.688 5.315,-4.517 4.025,-8.479 24.839,-2.048 23.97,11.09a14.798,14.798 0,0 0,-1.522 -2.486s-0.075,4.991 -1.437,6.957c-1.64,0.464 -15.061,0.239 -20.053,-9.948 -4.006,2.268 -5.06,7.015 -4.91,10.72z"
-      android:fillColor="#969696"
+      android:fillColor="#57462D"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M31.15,46.543c-2.66,0.022 -15.617,-4.022 -12.61,-26.045 0,0 0.65,9.916 2.775,12.788 1.382,1.868 2.625,2.57 3.82,0.746 1.248,-1.9 3.946,-3.473 6.038,-1.677 1.737,-1.85 4.848,-0.212 6.084,1.677 1.195,1.823 2.44,1.123 3.822,-0.746 2.125,-2.872 2.586,-12.456 2.586,-12.456 3.456,23.6 -9.855,25.735 -12.515,25.713z"
-      android:fillColor="#969696"
+      android:fillColor="#57462D"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M26.527,36.802a7.118,7.118 0,0 1,4.568 -2.096,7.29 7.29,0 0,1 4.503,2.099c-0.788,0.525 -5.874,1.737 -9.071,-0.003z"
-      android:fillColor="#ffe8be"
+      android:fillColor="#d4aa78"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M26.611,51.297a29.35,29.35 0,0 0,-8.171 -3.501c-4.778,-0.758 -13.423,-1.518 -11.271,-10.086C12.023,18.38 18.85,3.688 31.457,3.87c12.836,0.184 19.09,15.8 23.84,33.865 1.904,7.238 -6.79,9.313 -11.508,10.06A21.129,21.129 0,0 0,36 51.14c-6.963,4.765 -1.812,4.7 -9.389,0.158zM31.462,52.495a14.292,14.292 0,0 1,10.663 -6.6c5.422,-0.86 14.562,-4.28 8.565,-9.72 -10.765,-9.764 -6.167,-22.032 -19.638,-22.032 -12.615,0 -8.748,12.268 -19.513,22.032 -5.997,5.44 3.143,8.86 8.564,9.72 1.97,0.313 8.017,1.127 11.36,6.6z"
