--- a/app/src/main/res/drawable/avatar_2.xml
+++ b/app/src/main/res/drawable/avatar_2.xml
@@ -8,7 +8,7 @@
       android:fillColor="#9f82bb"/>
   <path
       android:pathData="m23.255,38.68 l15.907,0.121v12.918l-15.907,-0.121V38.68z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#d4aa78"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M53.478,51.993A30.814,30.814 0,0 1,30.9 61.8a31.206,31.206 0,0 1,-3.837 -0.237A34.069,34.069 0,0 1,15.9 57.919a31.032,31.032 0,0 1,-7.856 -6.225l1.283,-3.1 13.925,-6.212c0,4.535 1.31,10.02 7.439,10.113 7.57,0.114 8.47,-5.475 8.47,-10.15l12.79,6.282z"
@@ -22,11 +22,11 @@
       android:fillAlpha="0.11"/>
   <path
       android:pathData="M31.129,8.432c21.281,0 12.988,35.266 0,35.266 -12.266,0 -21.281,-35.266 0,-35.266z"
-      android:fillColor="#ffe8be"
+      android:fillColor="#d4aa78"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M18.365,24.046c-3.07,1.339 -0.46,7.686 1.472,7.658a31.977,31.977 0,0 1,-1.472 -7.659zM44.14,24.045c3.07,1.339 0.46,7.687 -1.471,7.658a31.998,31.998 0,0 0,1.471 -7.658z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#d4aa78"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M23.252,42.382a48.332,48.332 0,0 0,-13.204 5.288c-1.645,0.945 -1.605,2.399 -1.237,2.926 1.316,1.882 5.551,-0.522 7.089,-1.16a84.89,84.89 0,0 1,8.041 -2.989,8.592 8.592,0 0,1 -0.689,-4.065z"
