--- a/app/src/main/res/drawable/avatar_4.xml
+++ b/app/src/main/res/drawable/avatar_4.xml
@@ -5,14 +5,14 @@
     android:viewportHeight="62.571">
   <path
       android:pathData="M31.129,8.432c21.281,0 12.988,35.266 0,35.266 -12.266,0 -21.281,-35.266 0,-35.266z"
-      android:fillColor="#ffe8be"
+      android:fillColor="#a16e4b"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M30.9,30.9m-30.9,0a30.9,30.9 0,1 1,61.8 0a30.9,30.9 0,1 1,-61.8 0"
-      android:fillColor="#485a69"/>
+      android:fillColor="#98D1D8"/>
   <path
       android:pathData="M52.797,52.701c-0.608,-1.462 -0.494,-2.918 -5.365,-5.187 -2.293,-0.542 -8.21,-1.319 -9.328,-3.4 -0.566,-1.052 -0.43,-2.535 -0.43,-5.292l-12.93,-0.143c0,2.778 0.109,4.259 -0.524,5.299 -1.19,1.957 -8.935,3.384 -11.338,4.024 -4.093,1.819 -3.625,2.925 -4.165,4.406a30.896,30.896 0,0 0,44.08 0.293z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#a16e4b"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M52.797,52.701c-0.576,-1.384 -0.505,-2.763 -4.626,-4.83a2.862,2.862 0,0 0,-0.74 -0.357c-0.488,-0.116 -1.36,-0.286 -1.792,-0.372 -1.167,7.133 -19.287,16.863 -28.956,-0.047 -1.04,0.244 -3.219,0.752 -3.801,0.907 -4.093,1.819 -3.625,2.926 -4.165,4.406a30.896,30.896 0,0 0,44.08 0.293z"
@@ -65,15 +65,15 @@
   </group>
   <path
       android:pathData="M19.11,24.183c-2.958,1.29 -0.442,7.41 1.42,7.383a30.847,30.847 0,0 1,-1.42 -7.383zM43.507,24.182c2.96,1.292 0.443,7.411 -1.419,7.384a30.827,30.827 0,0 0,1.419 -7.384z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#a16e4b"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M31.114,8.666c8.722,0 12.377,6.2 12.601,13.367 0.307,9.81 -5.675,21.43 -12.6,21.43 -6.56,0 -12.706,-12.018 -12.333,-21.928 0.26,-6.953 3.814,-12.869 12.332,-12.869z"
-      android:fillColor="#ffe8be"
+      android:fillColor="#a16e4b"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M38.361,16.587c-0.174,0.728 -3.174,6.273 -7.684,8.137 0.756,-1.317 1.97,-2.892 2.058,-4.4 -2.162,3.173 -10.983,6.337 -16.2,4.79C15.364,5.79 30.182,6.256 31.183,6.31c1.002,-0.054 15.857,-0.34 14.686,18.982 -5.835,-1.09 -7.83,-5.543 -7.508,-8.705z"
-      android:fillColor="#ecbe6a"
+      android:fillColor="#352C1E"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M16.754,19.778c1.271,-18.485 27.928,-17.772 28.88,0 -4.396,-12.378 -25.125,-12.187 -28.88,0z"
@@ -81,6 +81,6 @@
       android:fillType="evenOdd"/>
   <path
       android:pathData="M43.66,24.657s-2.289,10.706 -9.639,14.83c23.528,-6.236 15.887,-32.31 6.597,-32.324 -2.883,-7.863 -24.45,-5.7 -27.45,9.45s9.923,21.763 10.947,22.372a31.976,31.976 0,0 1,-3.785 -7.438,4.952 4.952,0 0,1 -2.151,-2.747 6.622,6.622 0,0 1,-0.212 -3.412c-0.726,-0.131 -1.284,-0.275 -1.284,-0.275a27.284,27.284 0,0 1,0.06 -5.017c0.39,-3.894 1.789,-9.096 6.83,-11.947 3.523,-1.992 11.119,-2.55 15.692,0.328 5.362,3.374 6.821,10.69 6.452,16.627z"
-      android:fillColor="#d6a956"
+      android:fillColor="#352C1E"
       android:fillType="evenOdd"/>
 </vector>
