--- a/app/src/main/res/drawable/avatar_6.xml
+++ b/app/src/main/res/drawable/avatar_6.xml
@@ -8,7 +8,7 @@
       android:fillColor="#ffc200"/>
   <path
       android:pathData="m24.861,39.625 l12.301,0.116V52.03l-12.301,-0.116V39.625z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#d4aa78"
       android:fillType="evenOdd"/>
   <path
       android:fillColor="#FF000000"
@@ -18,19 +18,19 @@
       android:fillAlpha="0.11"/>
   <path
       android:pathData="M30.935,10.85c20.245,0 12.355,33.549 0,33.549 -11.67,0 -20.245,-33.548 0,-33.548z"
-      android:fillColor="#ffe8be"
+      android:fillColor="#d4aa78"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M18.815,25.834c-2.816,1.229 -0.422,7.05 1.35,7.024a29.337,29.337 0,0 1,-1.35 -7.024zM43.309,25.806c2.815,1.228 0.45,7.078 -1.32,7.052a29.499,29.499 0,0 0,1.32 -7.052z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#d4aa78"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M30.92,11.073c8.298,0 11.775,5.9 11.988,12.716 0.292,9.332 -5.398,20.387 -11.987,20.387 -6.24,0 -12.087,-11.433 -11.732,-20.86 0.248,-6.615 3.628,-12.242 11.732,-12.242z"
-      android:fillColor="#ffe8be"
+      android:fillColor="#d4aa78"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M19.573,30.206s0.217,-8.582 7.93,-8.908 9.343,-4.454 9.343,-4.454a30.732,30.732 0,0 0,6.492 8.99c5.806,-10.92 -4.97,-16.378 -4.97,-16.378s0.235,-6.347 -7.605,-6.246 -6.519,6.68 -6.519,6.68 -11.842,6.41 -4.671,20.316z"
-      android:fillColor="#969696"
+      android:fillColor="#6C6B6B"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M52.797,52.701c-0.484,-1.122 -1.787,-3.851 -2.822,-4.5 -4.398,-2.756 -8.086,-3.155 -12.813,-5.3 0.238,10.814 -12.055,10.672 -12.302,-0.294 -4.974,2.234 -9.567,3.463 -14.228,6.293 -0.948,0.576 -1.508,2.475 -1.915,3.508a30.896,30.896 0,0 0,44.08 0.293z"
