--- a/app/src/main/res/drawable/avatar_7.xml
+++ b/app/src/main/res/drawable/avatar_7.xml
@@ -8,7 +8,7 @@
       android:fillColor="#9f82bb"/>
   <path
       android:pathData="M23.255,38.68l15.907,0.121v12.918l-15.907,-0.121V38.68z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#ffe7d1"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M53.478,51.993A30.814,30.814 0,0 1,30.9 61.8a31.547,31.547 0,0 1,-9.23 -1.402,31.124 31.124,0 0,1 -13.626,-8.704l1.283,-3.1 13.925,-6.212c0,4.535 1.519,7.06 7.648,7.153 7.57,0.113 8.261,-2.515 8.261,-7.19l12.79,6.282z"
@@ -22,11 +22,11 @@
       android:fillAlpha="0.11"/>
   <path
       android:pathData="M31.129,8.432c21.281,0 12.988,35.266 0,35.266 -12.266,0 -21.281,-35.266 0,-35.266z"
-      android:fillColor="#ffe8be"
+      android:fillColor="#ffe7d1"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M18.365,24.045c-3.07,1.34 -0.46,7.687 1.472,7.658a31.978,31.978 0,0 1,-1.472 -7.658zM44.14,24.045c3.07,1.339 0.46,7.687 -1.471,7.658a31.997,31.997 0,0 0,1.471 -7.658z"
-      android:fillColor="#f9dca4"
+      android:fillColor="#ffe7d1"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M22.035,35.1a1.879,1.879 0,0 1,-0.069 -0.504v-0.005a1.422,1.422 0,0 1,1.22 -1.361,1.046 1.046,0 0,0 0.907,1.745 4.055,4.055 0,0 0,0.981 -0.27c0.293,-0.134 0.607,-0.289 0.943,-0.481a13.439,13.439 0,0 0,1.426 -1.014,3.04 3.04,0 0,1 1.91,-0.787 2.015,2.015 0,0 1,1.293 0.466,2.785 2.785,0 0,1 0.612,0.654 2.77,2.77 0,0 1,0.612 -0.654,2.015 2.015,0 0,1 1.292,-0.466 3.039,3.039 0,0 1,1.911 0.787,13.42 13.42,0 0,0 1.426,1.014c0.336,0.192 0.65,0.347 0.943,0.48a4.054,4.054 0,0 0,0.981 0.271,1.046 1.046,0 0,0 0.906,-1.745 1.422,1.422 0,0 1,1.22 1.36h0.002l-0.001,0.006a1.879,1.879 0,0 1,-0.069 0.504c-0.78,3.631 -7.373,2.769 -9.223,0.536 -1.85,2.233 -8.444,3.095 -9.223,-0.536z"
